# visuals

./: .eastwood  .gitignore  .lein-repl-history  CLAUDE.md  Cargo.toml  README.md  README_MODULAR.md  core.clj  core_modular.clj  effects.clj  generators.clj  modulators.clj  patch.clj  project.clj
.clj-kondo/.cache/v1/clj/: .effects.transit.json  .ffects.transit.json  clojure.core.protocols.transit.json  clojure.core.reducers.transit.json  clojure.core.server.transit.json  clojure.core.specs.alpha.transit.json  clojure.core.transit.json  clojure.data.transit.json  clojure.datafy.transit.json  clojure.edn.transit.json  clojure.inspector.transit.json  clojure.instant.transit.json  clojure.java.browse-ui.transit.json  clojure.java.browse.transit.json  clojure.java.io.transit.json  clojure.java.javadoc.transit.json  clojure.java.shell.transit.json  clojure.main.transit.json  clojure.math.transit.json  clojure.parallel.transit.json  clojure.pprint.transit.json  clojure.reflect.transit.json  clojure.repl.transit.json  core.transit.json  (+67 more)
.github/workflows/: ci.yml
crates/fractal-app/: Cargo.toml
crates/fractal-core/: Cargo.toml
crates/fractal-gpu/shaders/: ripple.wgsl
crates/fractal-gpu/src/: lib.rs
rust/: README.md  RUST_GPU_PLAN.md  RUST_REWRITE_PLAN.md
rust/crates/fractal-app/: Cargo.toml
rust/crates/fractal-app/src/: app.rs  input.rs  lib.rs  main.rs
rust/crates/fractal-gpu/: Cargo.toml
src/: core.clj  effects.clj  generators.clj  modulators.clj  patch.clj  presets.clj
test/: effects_test.clj  generators_test.clj  modulators_test.clj  patch_test.clj
(+61 files in other folders)
