[package]
name = "fractal-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fractal"
path = "src/main.rs"

[dependencies]
fractal-core = { path = "../fractal-core" }
fractal-gpu  = { path = "../fractal-gpu" }
winit = "0.30"
wgpu  = "22"
egui  = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
