[package]
name = "fractal-app"
version = "0.1.0"
edition = "2021"

[dependencies]
fractal-core = { path = "../fractal-core" }
fractal-gpu  = { path = "../fractal-gpu" }
winit        = "0.30"
wgpu         = "22"
bytemuck     = { version = "1", features = ["derive"] }
pollster     = "0.3"
log          = "0.4"
env_logger   = "0.11"
